--- a/index.html
+++ b/index.html
@@ -6,6 +6,27 @@
     <title>Calesa Login</title>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
+    <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
+    <script type="module">
+        //Import all JS dependencies and config database
+        import {initializeApp} from "https://www.gstatic.com/firebasejs/10.3.1/firebase-app.js";
+        import {getDatabase, set, get, update, remove, ref, child, onValue} from "https://www.gstatic.com/firebasejs/10.3.1/firebase-database.js"; 
+        const firebaseConfig = {
+        apiKey: "AIzaSyDb87oTfIXSDWFTmCwpoZ1hpjovJLtwDI0",
+        authDomain: "calesawebapp.firebaseapp.com",
+        databaseURL: "https://calesawebapp-default-rtdb.firebaseio.com",
+        projectId: "calesawebapp",
+        storageBucket: "calesawebapp.appspot.com",
+        messagingSenderId: "992390081249",
+        appId: "1:992390081249:web:6b5a47227f9546e64ae5a0"
+        }; 
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        window.db = getDatabase();    
+        window.itemRef = ref(db,'Items/');
+        window.userRef = ref(db,'Users/');
+    </script>
 </head>
 <body>
     <div>
@@ -19,5 +40,15 @@
             <button id="loginSubmit">Submit</button>
         </div>
     </div>
+
+    <script type="module">
+         
+        window.fieldUsername = document.querySelector("#enterUsername");
+        window.fieldPassword = document.querySelector("#enterPassword");
+        window.submitButton = document.querySelector("#loginSubmit");
+
+        
+    </script>
+    <script src="index.js" type="module"></script>
 </body>
 </html>
