Changed link to go back home on additem html

--- a/AddItem.html
+++ b/AddItem.html
@@ -41,8 +41,8 @@
         </div>
             
     </div> <br>
-    <div>
-        <a href="AddItem.html" class="link">Add Item</a>
+    <div class="link">
+        <a href="order.html" class="link">Back to Order</a>
     </div>    
 
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
