--- a/order.html
+++ b/order.html
@@ -33,7 +33,7 @@
     <div class="container">
         <ul id="itemList"></ul>
     </div> <br>
-    <div>
+    <div class="link">
         <a href="AddItem.html" class="link">Add Item</a>
     </div>    
 
