changed id field to be number type

--- a/AddItem.html
+++ b/AddItem.html
@@ -35,7 +35,7 @@
     </div>
     <div class="container">
         <div class="loginForm">
-            <input type="text" placeholder="id" id="enterId"><br>
+            <input type="number" placeholder="id" id="enterId"><br>
             <input type="text" placeholder="Articulo" id="enterText"><br>
             <button id="enterItem">Create</button>
         </div>
