tryig to filter items

--- a/AddItem.html
+++ b/AddItem.html
@@ -36,6 +36,15 @@
     <div class="container">
         <div class="loginForm">
             <input type="text" placeholder="Articulo" id="enterText"><br>
+            <label for="categoria">Categoria: </label>
+            <select name="categoria" id="enterCategoria">
+                <option value="Desechable">Desechable</option>
+                <option value="Sabor">Sabor</option>
+                <option value="Insumo">Insumo</option>
+                <option value="Papeleria">Papeleria</option>
+                <option value="Limpieza">Limpieza</option>
+            </select>
+            <br>
             <button id="enterItem">Create</button>
         </div>
             
