--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         window.db = getDatabase();    
         window.itemRef = ref(db,'Items/');
         window.userRef = ref(db,'Users/');
+        window.USER = "";
     </script>
 </head>
 <body>
