Succes making update on change categ

--- a/AddItem.html
+++ b/AddItem.html
@@ -37,7 +37,7 @@
         <div class="loginForm">
             <input type="text" placeholder="Articulo" id="enterText"><br>
             <label for="categoria">Categoria: </label>
-            <select name="categoria" id="enterCategoria">
+            <select name="categoria" id="enterCategoria" class="loginForm">
                 <option value="Desechable">Desechable</option>
                 <option value="Sabor">Sabor</option>
                 <option value="Insumo">Insumo</option>
