Added Bebidas and Pasteles categories

--- a/AddItem.html
+++ b/AddItem.html
@@ -39,6 +39,8 @@
             <label for="categoria">Categoria: </label>
             <select name="categoria" id="enterCategoria" class="loginForm">
                 <option value="Desechable">Desechable</option>
+                <option value="Bebidas">Bebidas</option>
+                <option value="Pasteles">Pasteles</option>
                 <option value="Sabor">Sabor</option>
                 <option value="Insumo">Insumo</option>
                 <option value="Papeleria">Papeleria</option>
