--- a/order.html
+++ b/order.html
@@ -33,6 +33,8 @@
     <div class="container">
         <select name="categoria" id="selectCategoria">
             <option value="Desechable">Desechable</option>
+            <option value="Bebidas">Bebidas</option>
+            <option value="Pasteles">Pasteles</option>
             <option value="Sabor">Sabor</option>
             <option value="Insumo">Insumo</option>
             <option value="Papeleria">Papeleria</option>
