visual change in category selector

--- a/AddItem.html
+++ b/AddItem.html
@@ -36,8 +36,8 @@
     <div class="container">
         <div class="loginForm">
             <input type="text" placeholder="Articulo" id="enterText"><br>
-            <label for="categoria">Categoria: </label>
-            <select name="categoria" id="enterCategoria" class="loginForm">
+            <label for="categoria">Categoria: </label>br
+            <select name="categoria" id="enterCategoria" class="setSelect">
                 <option value="Desechable">Desechable</option>
                 <option value="Bebidas">Bebidas</option>
                 <option value="Pasteles">Pasteles</option>
