--- a/order.html
+++ b/order.html
@@ -31,7 +31,8 @@
         <h3>coffee shop</h3>
     </div>
     <div class="container">
-        <select name="categoria" id="selectCategoria">
+        <div class="centered">
+            <select name="categoria" id="selectCategoria" class="chooseSelect">
             <option value="Desechable">Desechable</option>
             <option value="Bebidas">Bebidas</option>
             <option value="Pasteles">Pasteles</option>
@@ -39,7 +40,8 @@
             <option value="Insumo">Insumo</option>
             <option value="Papeleria">Papeleria</option>
             <option value="Limpieza">Limpieza</option>
-        </select>
+        </select></div>
+        
         <ul id="itemList"></ul>
     </div> <br>
     <div class="link">
