--- a/AddItem.html
+++ b/AddItem.html
@@ -36,7 +36,8 @@
     <div class="container">
         <div class="loginForm">
             <input type="text" placeholder="Articulo" id="enterText"><br>
-            <label for="categoria">Categoria: </label>br
+            <label for="categoria">Categoria: </label>
+            <br>
             <select name="categoria" id="enterCategoria" class="setSelect">
                 <option value="Desechable">Desechable</option>
                 <option value="Bebidas">Bebidas</option>
