added user js to store global user

--- a/index.html
+++ b/index.html
@@ -46,5 +46,6 @@
         window.submitButton = document.querySelector("#loginSubmit"); 
     </script>
     <script src="index.js" type="module"></script>
+    <script src="user.js" type="module"></script>
 </body>
 </html>
