--- a/order.html
+++ b/order.html
@@ -23,12 +23,14 @@
         const app = initializeApp(firebaseConfig);
         window.db = getDatabase();    
         window.itemRef = ref(db,'Items/');
+        window.USER
     </script>
     </head>
 <body>
     <div>
         <h1>CALESA</h1>
         <h3>coffee shop</h3>
+        <h3 id="loggedUser"></h3>
     </div>
     <div class="container">
         <div class="centered">
@@ -52,8 +54,10 @@
 	<script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
     <script>
         window.selectCategoria = document.querySelector("#selectCategoria");
+        window.loggedUser = document.querySelector("#loggedUser");
+        loggedUser.value = USER;
     </script>
 <script src="itemList.js" type="module"></script>
-    
+<script src="user.js" type="module"></script>
 </body>
 </html>
