--- a/order.html
+++ b/order.html
@@ -10,6 +10,7 @@
         //Import all JS dependencies and config database
         import {initializeApp} from "https://www.gstatic.com/firebasejs/10.3.1/firebase-app.js";
         import {getDatabase, set, get, update, remove, ref, child, onValue} from "https://www.gstatic.com/firebasejs/10.3.1/firebase-database.js"; 
+        import {USER} from 
         const firebaseConfig = {
         apiKey: "AIzaSyDb87oTfIXSDWFTmCwpoZ1hpjovJLtwDI0",
         authDomain: "calesawebapp.firebaseapp.com",
