--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         window.db = getDatabase();    
         window.itemRef = ref(db,'Items/');
         window.userRef = ref(db,'Users/');
-        window.USER = "";
+        localStorage.setItem("USER","");
     </script>
 </head>
 <body>
@@ -46,6 +46,5 @@
         window.submitButton = document.querySelector("#loginSubmit"); 
     </script>
     <script src="index.js" type="module"></script>
-    <script src="user.js" type="module"></script>
 </body>
 </html>
