--- a/order.html
+++ b/order.html
@@ -25,7 +25,7 @@
         const app = initializeApp(firebaseConfig);
         window.db = getDatabase();    
         window.itemRef = ref(db,'Items/');
-        window.USER
+        
     </script>
     </head>
 <body>
@@ -57,9 +57,8 @@
     <script>
         window.selectCategoria = document.querySelector("#selectCategoria");
         window.loggedUser = document.querySelector("#loggedUser");
-        loggedUser.value = USER;
+        loggedUser = localStorage.getItem("USER");
     </script>
 <script src="itemList.js" type="module"></script>
-<script src="user.js" type="module"></script>
 </body>
 </html>
