--- a/order.html
+++ b/order.html
@@ -58,6 +58,8 @@
         window.selectCategoria = document.querySelector("#selectCategoria");
         window.loggedUser = document.querySelector("#loggedUser");
         loggedUser = localStorage.getItem("USER");
+        window.canEdit = localStorage.getItem("canEdit");
+        window.canAdd = localStorage.getItem("canAdd");
     </script>
 <script src="itemList.js" type="module"></script>
 </body>
