--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         window.itemRef = ref(db,'Items/');
         window.userRef = ref(db,'Users/');
         localStorage.setItem("USER","");
+        localStorage.setItem("canEdit","false");
+
+        localStorage.setItem("canAdd","false");
+
     </script>
 </head>
 <body>
