--- a/order.html
+++ b/order.html
@@ -51,6 +51,7 @@
     </div> <br>
     <div class="link">
         <a href="AddItem.html" class="link">Add Item</a>
+        <a href="index.html" class="link">Sign out</a>
     </div>    
 
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
