added href to header div

--- a/AddItem.html
+++ b/AddItem.html
@@ -57,7 +57,7 @@
     </script>
 </head>
 <body>
-    <div>
+    <div href="order.html">
         <h1>CALESA</h1>
         <h3>coffee shop</h3>
     </div>
