made header link

--- a/AddItem.html
+++ b/AddItem.html
@@ -57,10 +57,12 @@
     </script>
 </head>
 <body>
-    <div href="order.html">
+    <a href="order.html">
+    <div>
         <h1>CALESA</h1>
         <h3>coffee shop</h3>
     </div>
+    </a>
 
     <div class="container">
         <div class="loginForm">
