--- a/order.html
+++ b/order.html
@@ -31,10 +31,12 @@
     </script>
     </head>
 <body>
-    <div href="order.html">
-        <h1>CALESA</h1>
-        <h3>coffee shop</h3>
-    </div>
+    <a href="order.html">
+        <div>
+            <h1>CALESA</h1>
+            <h3>coffee shop</h3>
+        </div>
+        </a>
     <div class="container">
         <div class="centered">
             <select name="categoria" id="selectCategoria" class="chooseSelect">
