--- a/order.html
+++ b/order.html
@@ -31,7 +31,7 @@
     </script>
     </head>
 <body>
-    <a href="order.html">
+    <a href="order.html" class="header">
         <div>
             <h1>CALESA</h1>
             <h3>coffee shop</h3>
