added summary section

--- a/order.html
+++ b/order.html
@@ -31,6 +31,7 @@
     <div class="link">
         <a href="AddItem.html" class="link">Add Item</a>
         <a href="index.html" class="link">Sign out</a>
+        <a href="summary.html" class="link">Summary</a>
     </div>    
 
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
