added vendor option

--- a/byVendor.html
+++ b/byVendor.html
@@ -22,6 +22,7 @@
             <option value="Unica">Unica</option>
             <option value="Origen">Origen</option>
             <option value="Etrusca">Etrusca</option>
+            <option value="Dummy">Dummy</option>
         </select></div>
         
         <ul id="itemList"></ul>
