--- a/summary.html
+++ b/summary.html
@@ -18,6 +18,7 @@
         <ul id="itemListSummary"></ul>
     </div> <br>
     <div class="link">
+        <a href="byVendor.html" class="link">by Vendor</a>
         <a href="order.html" class="link">Back to Order</a>
         <a href="index.html" class="link">Sign out</a>
     </div>    
