--- a/AddItem.html
+++ b/AddItem.html
@@ -52,6 +52,14 @@
                 <option value="Limpieza">Limpieza</option>
             </select>
             <br>
+            <select name="categoria" id="enterVendor" class="setSelect">
+                <option value="Costco">Costco</option>
+                <option value="Sams">Sams</option>
+                <option value="Unica">Unica</option>
+                <option value="Origen">Origen</option>
+                <option value="Etrusca">Etrusca</option>
+                <option value="Dummy">Dummy</option>
+            </select>
             <button id="enterItem">Create</button>
         </div>
             
