changed link look

--- a/AddItem.html
+++ b/AddItem.html
@@ -52,14 +52,15 @@
                 <option value="Limpieza">Limpieza</option>
             </select>
             <br>
-            <select name="categoria" id="enterVendor" class="setSelect">
+            <label for="vendor">Provedor: </label><br>
+            <select name="vendor" id="enterVendor" class="setSelect">
                 <option value="Costco">Costco</option>
                 <option value="Sams">Sams</option>
                 <option value="Unica">Unica</option>
                 <option value="Origen">Origen</option>
                 <option value="Etrusca">Etrusca</option>
                 <option value="Dummy">Dummy</option>
-            </select>
+            </select><br>
             <button id="enterItem">Create</button>
         </div>
             
@@ -67,7 +68,7 @@
     <br>
 
     <div class="link">
-        <a href="order.html" class="link">Back to Order</a>
+        <a href="order.html" class="linkbutton">Back to Order</a>
     </div>    
 
     <script>
