--- a/byVendor.html
+++ b/byVendor.html
@@ -28,9 +28,9 @@
         <ul id="itemList"></ul>
     </div> <br>
     <div class="link">
-        <a href="order.html" class="link">by Catergory</a>
-        <a href="summary.html" class="link">Summary</a>
-        <a href="index.html" class="link">Sign out</a>
+        <a href="order.html" class="linkbutton">by Catergory</a>
+        <a href="summary.html" class="linkbutton">Summary</a>
+        <a href="index.html" class="linkbutton">Sign out</a>
     </div>    
 
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
