--- a/order.html
+++ b/order.html
@@ -29,9 +29,10 @@
         <ul id="itemList"></ul>
     </div> <br>
     <div class="link">
-        <a href="AddItem.html" class="link">Add Item</a>
-        <a href="summary.html" class="link">Summary</a>
-        <a href="index.html" class="link">Sign out</a>
+            <a href="AddItem.html" class="linkbutton">Add Item</a>
+            <a href="summary.html" class="linkbutton">Summary</a>
+            <a href="index.html" class="linkbutton">Sign out</a>
+
     </div>    
 
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
