fixed typo in Proveedor label

--- a/AddItem.html
+++ b/AddItem.html
@@ -52,7 +52,7 @@
                 <option value="Limpieza">Limpieza</option>
             </select>
             <br>
-            <label for="vendor">Provedor: </label><br>
+            <label for="vendor">Proveedor: </label><br>
             <select name="vendor" id="enterVendor" class="setSelect">
                 <option value="Costco">Costco</option>
                 <option value="Sams">Sams</option>
