added linkbutton tag and changed width

--- a/summary.html
+++ b/summary.html
@@ -18,9 +18,9 @@
         <ul id="itemListSummary"></ul>
     </div> <br>
     <div class="link">
-        <a href="byVendor.html" class="link">by Vendor</a>
-        <a href="order.html" class="link">Back to Order</a>
-        <a href="index.html" class="link">Sign out</a>
+        <a href="byVendor.html" class="linkbutton">by Vendor</a>
+        <a href="order.html" class="linkbutton">Back to Order</a>
+        <a href="index.html" class="linkbutton">Sign out</a>
     </div>    
 
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
