--- a/AddItem.html
+++ b/AddItem.html
@@ -68,7 +68,7 @@
     <br>
 
     <div class="link">
-        <a href="order.html" class="linkbutton">Back to Order</a>
+        <a href="order.html" class="linkbutton"> Regreso a orden </a>
     </div>    
 
     <script>
