--- a/order.html
+++ b/order.html
@@ -29,9 +29,9 @@
         <ul id="itemList"></ul>
     </div> <br>
     <div class="link">
-            <a href="AddItem.html" class="linkbutton">Add Item</a>
-            <a href="summary.html" class="linkbutton">Summary</a>
-            <a href="index.html" class="linkbutton">Sign out</a>
+            <a href="AddItem.html" class="linkbutton">Agregar Art.</a>
+            <a href="summary.html" class="linkbutton">Resumen</a>
+            <a href="index.html" class="linkbutton">Salir</a>
 
     </div>    
 
