--- a/byVendor.html
+++ b/byVendor.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calesa Order</title>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="summary.css">
     <script src="dbConfig.js" type="module"></script>
     </head>
 <body>
