--- a/barcode.html
+++ b/barcode.html
@@ -50,8 +50,7 @@
         }
       </style>
       <div class="wrapper">
-        <span>Value: <slot name="raw"></slot></span>
-        <span>Format: <slot name="format"></slot></span>
+        <span>ID: <slot name="raw"></slot></span>
       </div>
     </template>
 
