made bottom section row

--- a/barcode.html
+++ b/barcode.html
@@ -20,7 +20,7 @@
       }
       #scanned {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         gap:1rem;
       }
       #video-wrapper {
