--- a/order.html
+++ b/order.html
@@ -10,11 +10,11 @@
     </head>
 <body>
         <div>
-            <h1>CALESA</h1>
-            <h3>coffee shop</h3>
+            <h1 style="color: rgb(0, 120, 0); background-color: rgba(255, 255, 255, 0.7); font-size: 40px;">CALESA</h1>
+        <h3 style="color: rgb(0, 120, 0); background-color: rgba(255, 255, 255, 0.7); font-size: 20px; font-weight: bold;">coffee shop</h3>
         </div>
         
-    <div class="container">
+    <div class="container" style="height: 430px;">
         <div class="centered">
             <select name="categoria" id="selectCategoria" class="chooseSelect">
             <option value="Desechable">Desechable</option>
@@ -27,8 +27,8 @@
         </select></div>
         
         <ul id="itemList"></ul>
-    </div> <br>
-    <div class="link">
+    </div>
+    <div class="link" style="margin-top: 10px;">
             <a href="AddItem.html" class="linkbutton">Agregar Art.</a>
             <a href="summary.html" class="linkbutton">Resumen</a>
             <a href="index.html" class="linkbutton">Salir</a>
