--- a/byVendor.html
+++ b/byVendor.html
@@ -9,10 +9,10 @@
     <script src="dbConfig.js" type="module"></script>
     </head>
 <body>
-        <div>
-            <h1>CALESA</h1>
-            <h3>coffee shop</h3>
-        </div>
+    <div>
+        <h1 style="color: rgb(0, 120, 0); background-color: rgba(255, 255, 255, 0.7); font-size: 40px;">CALESA</h1>
+    <h3 style="color: rgb(0, 120, 0); background-color: rgba(255, 255, 255, 0.7); font-size: 20px; font-weight: bold;">coffee shop</h3>
+    </div>
         
     <div class="container">
         <div class="centered">
@@ -26,7 +26,7 @@
         </select></div>
         
         <ul id="itemList"></ul>
-    </div> <br>
+    </div>
     <div class="link">
         <a href="order.html" class="linkbutton">Pedido</a>
         <a href="summary.html" class="linkbutton">Resumen</a>
