--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 </head>
 <body>
     <div>
-        <h1 style="color: rgb(0, 120, 0); background-color: rgba(255, 255, 255, 0.5); font-size: 40px;">CALESA</h1>
-        <h3 style="color: rgb(0, 120, 0); background-color: rgba(255, 255, 255, 0.5); font-size: 20px; font-weight: bold;">coffee shop</h3>
+        <h1 style="color: rgb(0, 120, 0); background-color: rgba(255, 255, 255, 0.7); font-size: 40px;">CALESA</h1>
+        <h3 style="color: rgb(0, 120, 0); background-color: rgba(255, 255, 255, 0.7); font-size: 20px; font-weight: bold;">coffee shop</h3>
     </div>
     <div class="container" style="height: 300px; background-color: rgba(255, 255, 255, 0.8);">
         <div class="loginForm">
-            <h1 style="color: black; font-size: 30px;"> Iniciar Sesión</h1> <br>    
+            <h1 style="color: rgb(202, 0, 0); font-size: 30px;"> Iniciar Sesión</h1> <br>    
             <input type="text" placeholder="Usuario" id="enterUsername"><br>
             <input type="password" placeholder="Contraseña" id="enterPassword"><br>
             <button id="loginSubmit">Ingresar</button>
