--- a/additem.html
+++ b/additem.html
@@ -45,7 +45,7 @@
     
 
     <div id="main-container" class="container">
-        <input type="text" id="add-item-input" placeholder="Articulo nuevo">
+        <input type="text" id="add-item-input" placeholder="Articulo nuevo" style="margin-top: 25%;">
         <br>
         <select name="" id="add-categoria-select">
             <option value="">Categoria</option>
@@ -64,6 +64,11 @@
             <option value="Origen">Origen</option>
             <option value="Dummy">Dummy</option>
         </select>
+        <br>
+        <script>
+
+        </script>
+        <button id="add-submit-button" onclick="addItemToDB(document.getElementById('add-item-input').value,document.getElementById('add-add-categoria-select').value,document.getElementById('add-vendor-select').value,)">+ Añadir</button>
 
     </div>
 
