--- a/additem.html
+++ b/additem.html
@@ -56,7 +56,7 @@
             <option value="Bebidas">Bebidas</option>
         </select>
         <br>
-        <select name="" id="add-proveedor-select">
+        <select name="" id="add-vendor-select">
             <option value="">Proveedor</option>
             <option value="Costco">Costco</option>
             <option value="Sams">Sams</option>
@@ -68,7 +68,7 @@
         <script>
 
         </script>
-        <button id="add-submit-button" onclick="addItemToDB(document.getElementById('add-item-input').value,document.getElementById('add-add-categoria-select').value,document.getElementById('add-vendor-select').value,)">+ Añadir</button>
+        <button id="add-submit-button" onclick="addItemToDB(document.getElementById('add-item-input').value,document.getElementById('add-categoria-select').value,document.getElementById('add-vendor-select').value)">+ Añadir</button>
 
     </div>
 
