--- a/additem.html
+++ b/additem.html
@@ -18,7 +18,7 @@
 
     <div id="header" style="display: flex ;">
         <div id="header-left">
-            <button class="logo-button" style="background-color: black; border: 0px; padding: 0px; text-align: left; margin: 10px;">
+            <button class="logo-button" style="background-color: black; border: 0px; padding: 0px; text-align: left; margin: 10px;" onclick="location.href = 'index.html'">
                 <h1 style="color: white; margin-top: 0px;">CALESA</h1>
                 <h4 style="color: white;">coffee shop</h2>
             </button>
