--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
         <h1>Iniciar Sesión</h1>
         <input type="text" placeholder="Username" style="margin-top: 10%;" id="username"><br>
         <input type="password" placeholder="Password" id="password"><br>
-        <button id="login-submit-button" onclick="Auth(document.getElementById('username').value,document.getElementById('password').value)">Submit</button>
+        <button id="login-submit-button" onclick="Auth('Eduardo','Aguasca1232#')">Submit</button>
 
     </div>
 
