--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <div id="main-container" class="container">
         <br>
         <h1>Iniciar Sesión</h1>
-        <input type="text" placeholder="Username" style="margin-top: 10%;" id="username"><br>
-        <input type="password" placeholder="Password" id="password"><br>
+        <input type="text" placeholder="Username" style="margin-top: 10%; height: 40px;" id="username"><br>
+        <input type="password" placeholder="Password" id="password" style="height: 40px;"><br>
         <button id="login-submit-button" onclick="Auth('Eduardo','Aguasca1232#')">Submit</button>
 
     </div>
