--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="headerfooter.css">
     <script type="module" src="dbconfig.js"></script>
     <script type="module" src="loginAuth.js"></script>
+    <script>
+        localStorage.removeItem("USER")
+    </script>
 
 </head>
 <body>
