Removed hardcoded user and pass

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h1>Iniciar Sesión</h1>
         <input type="text" placeholder="Username" style="margin-top: 10%; height: 40px;" id="username"><br>
         <input type="password" placeholder="Password" id="password" style="height: 40px;"><br>
-        <button id="login-submit-button" onclick="Auth('Eduardo','Aguasca1232#')">Submit</button>
+        <button id="login-submit-button" onclick="Auth(document.getElementById('username').value,document.getElementById('password').value)">Submit</button>
 
     </div>
 
