change pass fix

--- a/usermenu.html
+++ b/usermenu.html
@@ -9,6 +9,7 @@
     <script type="module" src="dbconfig.js"></script>
     <script type="module" src="header.js"></script>
     <script type="module" src="render.js"></script>
+    <script type="module" src="loginAuth.js"></script>
 
 </head>
 <body>
@@ -73,7 +74,7 @@
             
         </div> 
         
-        <button id="change-pass-button" onclick="ChangePass(localStorage.getItem('USER'),document.getElementById('currentPass').value, document.getElementById('newPass').value)">Cambiar</button>
+        <button id="change-pass-button">Cambiar</button>
 
     </div>
 
