--- a/order.html
+++ b/order.html
@@ -44,9 +44,11 @@
     
 
     <div id="main-container" class="container">
+        <div style="margin-top: 20px; text-align: right; margin-right:20px; display: flex; align-items: center; justify-content: right;">
+            Resumir: <button class="toggle"></button>
+        </div>
         <div id="current-filter" style="margin: 0px; margin-top: 10px; padding: 0px; height: 10px; font-size: 16px;"></div>
         <ul id="itemList" style="list-style: none;">
-
         </ul>
     </div>
 
