--- a/order.html
+++ b/order.html
@@ -45,8 +45,8 @@
 
     <div id="main-container" class="container">
         
-        <div style="margin-top: 20px; text-align: right; margin-right:10px; display: flex; align-items: center; justify-content: right;">
-            <div id="current-filter" style="width: 50%; text-align: left; font-weight: bold;"></div>
+        <div style="margin-top: 20px; text-align: right; margin-right:20px; display: flex; align-items: center; justify-content: right;">
+            <div id="current-filter" style="width: 100%; margin-left: 20px; text-align: left; font-weight: bold;"></div>
             Resumir:
             <div style="width: 80px; height: 30px;">
                 <button class="toggle" onmousedown="localStorage.setItem('Summary',Number(!Boolean(Number(localStorage.getItem('Summary')))) );flagUpdate()"></button>
