--- a/order.html
+++ b/order.html
@@ -64,10 +64,13 @@
     <script>
         document.getElementById('current-filter').textContent = localStorage.getItem('Filter')
         if(localStorage.getItem('Summary') == "1"){
-            document.getElementById('circle').style.marginLeft='25px'
+            document.getElementById('circle').style.marginLeft='20px'
+            document.getElementById('circle').style.background='rgb(60, 180, 60)'
         }
         else{
-            document.getElementById('circle').style.marginLeft='0px'
+            document.getElementById('circle').style.marginLeft='2px'
+
+            document.getElementById('circle').style.background='gray'
         }
 
     </script>
