--- a/order.html
+++ b/order.html
@@ -56,9 +56,11 @@
             
         </div>
 
+        <div style="height: 450px; margin: 0px; padding: 0px; margin-top:10px; overflow: scroll;">
+            <ul id="itemList" style="list-style: none;">
+            </ul>
+        </div>
         
-        <ul id="itemList" style="list-style: none;">
-        </ul>
     </div>
 
     <script>
