--- a/order.html
+++ b/order.html
@@ -46,7 +46,7 @@
     <div id="main-container" class="container">
         
         <div style="margin-top: 20px; text-align: right; margin-right:20px; display: flex; align-items: center; justify-content: right;">
-            <div id="current-filter" style="width: 100%; margin-left: 20px; text-align: left; font-weight: bold;"></div>
+            <div id="current-filter" style="width: 100%; margin-left: 20px; text-align: left; font-weight: bold; font-size: 24px;"></div>
             Resumir:
             <div style="width: 80px; height: 30px;">
                 <button class="toggle" onmousedown="localStorage.setItem('Summary',Number(!Boolean(Number(localStorage.getItem('Summary')))) );flagUpdate()">
@@ -71,8 +71,7 @@
         }
         else{
             document.getElementById('circle').style.marginLeft='2px'
-
-            document.getElementById('circle').style.background='gray'
+            document.getElementById('circle').style.background='rgb(220, 220, 220)'
         }
 
     </script>
