--- a/order.html
+++ b/order.html
@@ -49,7 +49,12 @@
             <div id="current-filter" style="width: 100%; margin-left: 20px; text-align: left; font-weight: bold; font-size: 24px;"></div>
             Resumir:
             <div style="width: 80px; height: 30px;">
-                <button id="toggle" class="toggle" onmouseover="enter()" onmouseleave="leave()" onmousedown="localStorage.setItem('Summary',Number(!Boolean(Number(localStorage.getItem('Summary')))) );flagUpdate()">
+                <button id="toggle" class="toggle" onmousedown="
+                    enter(localStorage.getItem('Summary') == '1')
+                    setTimeout(function() {
+                        localStorage.setItem('Summary',Number(!Boolean(Number(localStorage.getItem('Summary')))) );flagUpdate()
+                    }, 500);
+                    ">
                 <div class="circle" id="circle"></div>
                 </button>
             </div>
@@ -75,9 +80,9 @@
             document.getElementById('toggle').style.backgroundColor='rgb(220, 220, 220)'
         }
 
-        function enter(){
+        function enter(enter){
             document.getElementById('circle').style.transition='0.5s'; 
-            if(localStorage.getItem('Summary') == 1){
+            if(localStorage.getItem('Summary') == 1 && enter){
                 document.getElementById('circle').style.marginLeft='1px'
                 document.getElementById('toggle').style.backgroundColor='rgb(220, 220, 220)'
             }
