--- a/order.html
+++ b/order.html
@@ -47,7 +47,7 @@
         
         <div style="margin-top: 20px; text-align: right; margin-right:20px; display: flex; align-items: center; justify-content: right;">
             <div id="current-filter" style="width: 100%; margin-left: 20px; text-align: left; font-weight: bold; font-size: 24px;"></div>
-            Resumir:
+            <h4>Resumir:</h4>
             <div style="width: 80px; height: 30px;">
                 <button id="toggle" class="toggle" onmousedown="
                     enter(localStorage.getItem('Summary') == '1')
@@ -78,7 +78,7 @@
         }
         else{
             document.getElementById('circle').style.marginLeft='1px'
-            document.getElementById('toggle').style.backgroundColor='rgb(200, 200, 200)'
+            document.getElementById('toggle').style.backgroundColor='rgb(230, 230, 230)'
         }
 
         function enter(enter){
@@ -86,7 +86,7 @@
             if(localStorage.getItem('Summary') == 1 && enter){
 
                 document.getElementById('circle').style.marginLeft='1px'
-                document.getElementById('toggle').style.backgroundColor='rgb(220, 220, 220)'
+                document.getElementById('toggle').style.backgroundColor='rgb(230, 230, 230)'
                 
             }
             else{
