--- a/order.html
+++ b/order.html
@@ -62,7 +62,7 @@
             
         </div>
 
-        <div style="height: 94%; margin: 0px; padding: 0px; margin-top:10px; overflow: scroll;">
+        <div style="height: 89%; margin: 0px; padding: 0px; margin-top:10px; margin-bottom: 10px; overflow: scroll;">
             <ul id="itemList" style="list-style: none;">
             </ul>
         </div>
