added Limpieza to addItem page category selector

--- a/additem.html
+++ b/additem.html
@@ -50,6 +50,7 @@
         <select name="" id="add-categoria-select">
             <option value="">Categoria</option>
             <option value="Desechable">Desechable</option>
+            <option value="Limpieza">Limpieza</option>
             <option value="Sabor">Sabor</option>
             <option value="Insumo">Insumo</option>
             <option value="Pasteles">Pasteles</option>
