--- a/order.html
+++ b/order.html
@@ -16,7 +16,7 @@
 
     <div id="header" style="display: flex ;">
         <div id="header-left">
-            <button class="logo-button" style="background-color: black; border: 0px; padding: 0px; text-align: left; margin: 10px;">
+            <button onclick="location.href='printsheet.html'" class="logo-button" style="background-color: black; border: 0px; padding: 0px; text-align: left; margin: 10px;">
                 <h1 style="color: white; margin-top: 0px;">CALESA</h1>
                 <h4 style="color: white;">coffee shop</h2>
             </button>
