--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     
 
     <div id="main-container" class="container" style="display: flex; align-items: center; text-align: center;">
-        <div style="width: 100%; margin-bottom: 100px;">
+        <div style="width: 100%; margin-bottom: 0%;">
                 <h1>Iniciar Sesión</h1>
                 <br>
                 <div style="margin-left: auto; margin-right: auto; display: flex; flex-direction: row; width: 230px; flex-wrap: wrap; height: auto; justify-content: center; align-items: center;" id="password-form">
