--- a/usermenu.html
+++ b/usermenu.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calesa Add Item</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+        <title>Calesa Add Item</title>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="headerfooter.css">
     <script type="module" src="dbconfig.js"></script>
@@ -19,7 +19,7 @@
 
     <div id="header" style="display: flex ;">
         <div id="header-left">
-            <button class="logo-button" style="background-color: black; border: 0px; padding: 0px; text-align: left; margin: 10px;" onclick="location.href = 'order.html'">
+            <button class="logo-button" style="background-color: transparent; border: 0px; padding: 0px; text-align: left; margin: 10px;" onclick="location.href = 'order.html'">
                 <h1 style="color: white; margin-top: 0px;">CALESA</h1>
                 <h4 style="color: white;">coffee shop</h2>
             </button>
