added consumos button to header

--- a/printsheet.html
+++ b/printsheet.html
@@ -14,7 +14,7 @@
 
     <div style="text-align: center ;">
         
-            <button onclick="location.href='order.html'" style="background-color: white; border: 0px; padding: 0px; text-align: center; margin: 10px; width: 340px;">
+            <button onclick="location.href='consumos.html'" style="background-color: white; border: 0px; padding: 0px; text-align: center; margin: 0px; width: 340px;">
                 <h1 style="color: black; margin-top: 0px;">CALESA</h1>
                 <h4 style="color: black;">coffee shop</h2>
             </button>
