--- a/consumos.html
+++ b/consumos.html
@@ -50,15 +50,14 @@
         
     </div>
     
-    <div id="main-container" class="container" style="display: flex; text-align: center; flex-direction: column; overflow: scroll;"> 
+    <div id="main-container" class="container" style="display: flex; text-align: center; flex-direction: column;">
         <div style="padding: 0px; width: 100%; display: flex; flex-shrink: 10;">
             <select name="item-choose" id="item-choose" onchange="localStorage.setItem('graph-item',this.value); location.reload()" style="height: 50px; width: 100%; border-radius: 25px;">
             </select>
         </div>
-        <br>
-        <div style="display: flex; flex-direction: column; text-align: center; padding: 0px; margin: 5px;">
+        <div style="display: flex; flex-direction: column; text-align: center; padding: 0px; margin: 5px; overflow: scroll;">
                 <div id="chart_div" style="width:100%; height:100%;"></div>
-<br>
+
                 <div id="chart_div2" style="width:100%; height:500;"></div>
         </div>
     </div>
