--- a/consumos.html
+++ b/consumos.html
@@ -55,7 +55,7 @@
             <select name="item-choose" id="item-choose" onchange="localStorage.setItem('graph-item',this.value); location.reload()" style="height: 50px; width: 100%; border-radius: 25px;">
             </select>
         </div>
-        <div style="display: flex; flex-direction: column; text-align: center; padding: 0px; margin: 5px; overflow: scroll;">
+        <div style="display: flex; flex-direction: column; text-align: center; padding: 0px; margin: 5px; overflow: scroll; padding-bottom: 20px;">
                 <div id="chart_div" style="width:100%; height:100%;"></div>
 
                 <div id="chart_div2" style="width:100%; height:500;"></div>
