--- a/consumos.html
+++ b/consumos.html
@@ -54,7 +54,7 @@
     
     <div id="main-container" class="container" style="display: flex; text-align: center; flex-direction: column;">
         <div style="padding: 0px; width: 100%; display: flex; flex-shrink: 10;">
-            <select name="item-choose" id="item-choose" onchange="localStorage.setItem('graph-item',this.value); location.reload()" style="height: 50px; width: 100%; border-radius: 25px; border: 1px solid rgb(150, 150, 150);">
+            <select name="item-choose" id="item-choose" onchange="localStorage.setItem('graph-item',this.value); location.reload()" style="background-color:#cc3333; color:whitesmoke; height: 50px; width: 100%; border-radius: 25px; border: 0px solid rgb(150, 150, 150); font-size: 18px;">
             </select>
         </div>
         <div style="display: flex; flex-direction: column; text-align: center; padding: 0px; margin: 5px; overflow: scroll; padding-bottom: 20px;">
