--- a/consumos.html
+++ b/consumos.html
@@ -28,8 +28,8 @@
     <div id="header" style="display: flex ; z-index: 0;">
         <div id="header-left">
             <button onclick="location.href='order.html'" class="logo-button" style="background-color: transparent; border: 0px; padding: 0px; text-align: left; margin: 0px;">
-                <h1 style="color:  rgb(205, 16, 16); margin-top: 0px;">CALESA</h1>
-                <h4 style="color: rgb(205, 16, 16);">coffee shop</h2>
+                <h1 style="color:  white; margin-top: 0px;">CALESA</h1>
+                <h4 style="color: white;">coffee shop</h2>
             </button>
         </div>
         <div id="header-right" style="width: 50%;">
