--- a/consumos.html
+++ b/consumos.html
@@ -60,6 +60,8 @@
                     Inventario: <span id="itemCurrentInv"></span>
                     <br> 
                     Paquete: <span id="itemPackQty"></span>
+                    <br>
+                    Venedor: <span id="itemVendor"></span>
                 </div>
                 <div id="chart_div" style="width:100%; height:100%;"></div>
                 <div id="chart_div2" style="width:100%; height:500;"></div>
