--- a/consumos.html
+++ b/consumos.html
@@ -61,7 +61,7 @@
                     <br> 
                     Paquete: <span id="itemPackQty"></span>
                     <br>
-                    Venedor: <span id="itemVendor"></span>
+                    Proveedor: <span id="itemVendor"></span>
                 </div>
                 <div id="chart_div" style="width:100%; height:100%;"></div>
                 <div id="chart_div2" style="width:100%; height:500;"></div>
