--- a/consumos.html
+++ b/consumos.html
@@ -56,7 +56,7 @@
         </div>
 
         <div style="display: flex; flex-direction: column; text-align: center; padding: 0px; margin: 5px; overflow: scroll; padding-bottom: 20px;">
-                <div>
+                <div style="text-align: left; margin-left: auto; margin-right: auto;">
                     Inventario: <span id="itemCurrentInv"></span>
                     <br> 
                     Paquete: <span id="itemPackQty"></span>
