--- a/consumos.html
+++ b/consumos.html
@@ -56,12 +56,17 @@
         </div>
 
         <div style="display: flex; flex-direction: column; text-align: center; padding: 0px; margin: 5px; overflow: scroll; padding-bottom: 20px;">
-                <div style="text-align: left; margin-left: auto; margin-right: auto;">
-                    Inventario: <span id="itemCurrentInv"></span>
-                    <br> 
-                    Paquete: <span id="itemPackQty"></span>
-                    <br>
-                    Proveedor: <span id="itemVendor"></span>
+                <div style="text-align: left; margin-left: auto; margin-right: auto; display: flex; flex-direction: row; gap: 20px;">
+                    <div>
+                        Inventario: <span id="itemCurrentInv"></span>
+                        <br> 
+                        Paquete: <span id="itemPackQty"></span>
+                    </div>
+                    <div>
+                        Proveedor: <span id="itemVendor"></span> <br>
+                        Costo: <span id="itemPrice">$ ##.##</span>
+                    </div>
+
                 </div>
                 <div id="chart_div" style="width:100%; height:100%;"></div>
                 <div id="chart_div2" style="width:100%; height:500;"></div>
