--- a/consumos.html
+++ b/consumos.html
@@ -58,13 +58,13 @@
         <div style="display: flex; flex-direction: column; text-align: center; padding: 0px; margin: 5px; overflow: scroll; padding-bottom: 20px;">
                 <div style="text-align: left; margin-left: auto; margin-right: auto; display: flex; flex-direction: row; gap: 20px;">
                     <div>
-                        Inventario: <span id="itemCurrentInv"></span>
+                        <h2>Inventario:</h2><span id="itemCurrentInv"></span>
                         <br> 
-                        Paquete: <span id="itemPackQty"></span>
+                        <h2>Paquete:</h2><span id="itemPackQty"></span>
                     </div>
                     <div>
-                        Proveedor: <span id="itemVendor"></span> <br>
-                        Costo: <span id="itemPrice">$ ##.##</span>
+                        <h2>Proveedor</h2><span id="itemVendor"></span> <br>
+                        <h2>Costo:</h2><span id="itemPrice">$ ##.##</span>
                     </div>
 
                 </div>
