--- a/consumos.html
+++ b/consumos.html
@@ -64,7 +64,7 @@
                     </div>
                     <div>
                         <b>Proveedor: </b><span id="itemVendor"></span><br>
-                        <b>Costo Paq: </b>$<span id="itemPrice">$ ##.##</span>
+                        <b>Costo Paq: </b>$ <span id="itemPrice"></span>
                     </div>
 
                 </div>
