--- a/menu.html
+++ b/menu.html
@@ -41,10 +41,18 @@
 
     <div id="main-container" class="container" style="display: flex; justify-content: center; align-items: center; text-align: center; flex-wrap: wrap; padding: 30px; gap:10px; overflow: scroll;">
         
-            <div class="menu-page-button"></div>
-            <div class="menu-page-button"></div>
-            <div class="menu-page-button"></div>
-            <div class="menu-page-button"></div>
+            <div class="menu-page-button" onclick="location.href='sell.html'"><h3 style="margin: auto;">POS</h3>
+                <img width="200px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/Card_Terminal_POS_Flat_Icon_Vector.svg/1024px-Card_Terminal_POS_Flat_Icon_Vector.svg.png?20180301080914" alt="">
+            </div>
+            <div class="menu-page-button" onclick="location.href='order.html'"><h3 style="margin: auto;">COMPRAS</h3>
+                <img width="200px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/96/Shopping_Basket_Flat_Icon_Vector.svg/1200px-Shopping_Basket_Flat_Icon_Vector.svg.png" alt="">
+            </div>
+            <div class="menu-page-button" onclick="location.href='cosnsumos.html'"><h3 style="margin: auto;">ITEMS</h3>
+                <img src="" alt="">
+            </div>
+            <div class="menu-page-button" onclick="location.href='inventario.html'"><h3 style="margin: auto;">INV</h3>
+                <img src="" alt="">
+            </div>
 
       
     </div>
