--- a/menu.html
+++ b/menu.html
@@ -48,7 +48,7 @@
                 <img width="200px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/96/Shopping_Basket_Flat_Icon_Vector.svg/1200px-Shopping_Basket_Flat_Icon_Vector.svg.png" alt="">
             </div>
             <div class="menu-page-button" onclick="location.href='cosnsumos.html'"><h3 style="margin: auto;">ITEMS</h3>
-                <img src="" alt="">
+                <img width="200px" style="mix-blend-mode: darken;" src="https://i.pinimg.com/736x/4f/11/e6/4f11e623f48c7cb463ea2f60deea1e40.jpg" alt="">
             </div>
             <div class="menu-page-button" onclick="location.href='inventario.html'"><h3 style="margin: auto;">INV</h3>
                 <img src="" alt="">
