--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div style="width: 100%;">
                 <h1>Iniciar Sesión</h1>
                 <br>
-                <div style="margin-left: auto; margin-right: auto; display: flex; flex-direction: row; width: 230px; flex-wrap: wrap; height: auto; justify-content: center; align-items: center;" id="password-form">
+                <div style="height: 300px; margin-left: auto; margin-right: auto; display: flex; flex-direction: row; width: 230px; flex-wrap: wrap; height: auto; justify-content: center; align-items: center;" id="password-form">
 
                     <div style="width: 230px;">
                         <input type="text" id="username" placeholder="Usuario" style="height: 40px;">
