--- a/menu.html
+++ b/menu.html
@@ -39,9 +39,9 @@
         
     </div>
 
-    <div id="main-container" class="container" style="z-index: 10;">
+    <div id="main-container" class="container" style="z-index: 10; overflow: scroll;">
         
-        <div style="margin-top: 20px; text-align: right; margin-right:20px; display: flex; align-items: center; justify-content: center; flex-wrap: wrap; gap: 10px;">
+        <div style="margin: 20px; text-align: right; display: flex; align-items: center; justify-content: center; flex-wrap: wrap; gap: 10px;">
             <div class="menu-page-button" onclick="location.href='sell.html'"><h3 style="margin: auto;">POS</h3>
                 <img width="200px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/Card_Terminal_POS_Flat_Icon_Vector.svg/1024px-Card_Terminal_POS_Flat_Icon_Vector.svg.png?20180301080914" alt="">
             </div>
